[package]
name = "ismyassafeyet"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.20", features = ["derive"] }
clap-verbosity-flag = "3.0.0"
env_logger = "0.11.5"
log = "0.4.22"
nanoid = "0.4.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
url = "2.5.3"

